# horgand

horgand/: AUTHORS  ChangeLog  Makefile.in  README  config.h.in  configure  configure.in  mkinstalldirs
horgand/data/: Default.horeb  Makefile.am  Makefile.in
horgand/man/: Makefile.in  horgand.1
horgand/src/: HORGAN.cxx  HORGAN.fl  HORGAN.h  Holrgan.h  Makefile.am  Makefile.in  config.h  config.h.in  horgand128.xpm  jackmidi.C  jackoutput.C  jackoutput.h  main.C  organ.C  organAccompaniment.C  organAudioOut.C  organDSPEffects.C  organFileIO.C  organMIDIIn.C  organvarios.C
