AC_PREREQ(2.61)
AC_INIT(horgand,1.09,holborn@telefonica.net) 
AM_INIT_AUTOMAKE(horgand,1.09)
AC_CONFIG_SRCDIR([src/HORGAN.cxx])
AC_CONFIG_HEADER([src/config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_MAKE_SET
AC_CHECK_PROG([FLTKCONFIG], [fltk-config], [fltk-config])
if test -z "$FLTKCONFIG"; then
  AC_MSG_ERROR([fltk not installed!])
fi

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MALLOC
AC_FUNC_SELECT_ARGTYPES
AC_CHECK_FUNCS([bzero floor memset select strdup strstr])

# Checks for libraries.
AC_CHECK_LIB([Xft], [main])
AC_CHECK_LIB([Xrender], [main])
AC_CHECK_LIB([asound], [main])
AC_CHECK_LIB([dl], [main])
AC_CHECK_LIB([fltk], [main])
AC_CHECK_LIB([fontconfig], [main])
AC_CHECK_LIB([freetype], [main])
AC_CHECK_LIB([m], [main])
AC_CHECK_LIB([pthread], [main])
AC_CHECK_LIB([rt], [main])
AC_CHECK_LIB([z], [main])
AC_CHECK_LIB([jack],main)
AC_CHECK_LIB([sndfile],sf_open)

AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h libintl.h stdlib.h string.h sys/ioctl.h unistd.h])
AC_CHECK_HEADER(alsa/asoundlib.h, true, AC_MSG_ERROR([Alsa is required]))
CXXFLAGS="-O3 -fno-rtti -pipe -ffast-math -ffunction-sections -fomit-frame-pointer -msse -Wall `$FLTKCONFIG --cxxflags` `pkg-config --cflags jack` `pkg-config --cflags sndfile`"
LIBS="`$FLTKCONFIG --ldflags` -lasound `pkg-config --libs jack` `pkg-config --libs sndfile`"
AC_OUTPUT(Makefile src/Makefile data/Makefile)

