datadir = $(prefix)/share/${PACKAGE}
DEFS = -DDATADIR=\"$(datadir)\" @DEFS@
bin_PROGRAMS = horgand
horgand_SOURCES = main.C \
        organ.C \
	organDSPEffects.C \
	organAudioOut.C \
	organMIDIIn.C \
	organAccompaniment.C \
	organvarios.C \
	organFileIO.C \
	jackoutput.C \
        HORGAN.cxx \
        Holrgan.h \
        jackoutput.h \
        HORGAN.h 

